--- a/src/css/base/_content-block.scss
+++ b/src/css/base/_content-block.scss
@@ -14,8 +14,6 @@
         }
 
         .content-block__image {
-            position: relative;
-            z-index: 1;
             @media(max-width:$sm - 0.02px) {
                 margin-bottom: 24px;
                 max-width: 330px;
@@ -23,13 +21,6 @@
             @media(min-width: $sm) {
                 min-width: 41.25%;
                 width: 41.25%;
-            }
-
-            img {
-                display: block;
-                position: relative;
-                width: 100%;
-                z-index: 1;
             }
 
             &::before {
@@ -57,8 +48,6 @@
         .content-block__text {
             flex-grow: 1;
             max-width: 750px;
-            position: relative;
-            z-index: 1;
 
             h1,
             h2 {
@@ -107,8 +96,6 @@
         }
 
         .content-block__image {
-            position: relative;
-            z-index: 1;
             @media(max-width: $md - 0.02px) {
                 max-width: 330px;
                 margin-left: auto;
@@ -122,13 +109,6 @@
                 max-height: 640px;
                 max-width: 640px;
                 margin-left: auto;
-            }
-
-            img {
-                display: block;
-                position: relative;
-                width: 100%;
-                z-index: 1;
             }
 
             &::before {
@@ -154,8 +134,6 @@
         }
 
         .content-block__text {
-            position: relative;
-            z-index: 1;
             @media(min-width: $md) {
                 grid-column: 1;
                 max-width: 750px;
@@ -198,11 +176,78 @@
         }
 
         .content-block__text {
+            @media(min-width: $md) {
+                grid-column: 1;
+                max-width: 750px;
+            }
+        }
+    }
+
+    &--type_4 {
+        @media(min-width: $md) {
+            display: grid;
+            gap: 0 48px;
+            grid-template: auto auto;
+            grid-template-columns: auto 50%;
+            justify-content: space-between;
+        }
+        @media(min-width: $lg) {
+            gap: 0 80px;
+        }
+
+        h1,
+        h2 {
+            margin-bottom: 16px;
+            @media(min-width: $md) {
+                grid-column: 1;
+                max-width: 680px;
+            }
+            @media(min-width: $fhd) {
+                margin-bottom: 40px;
+            }
+        }
+
+        .content-block__slider {
+            @media(max-width: $md - 0.02px) {
+                margin-bottom: 40px;
+            }
+            @media(min-width: $md) {
+                grid-row: span 3;
+                grid-column: 2;
+            }
+        }
+
+        .content-block__text {
             position: relative;
             z-index: 1;
             @media(min-width: $md) {
                 grid-column: 1;
-                max-width: 750px;
+                max-width: 680px;
+            }
+        }
+    }
+
+    &__image,
+    &__slider,
+    &__text {
+        position: relative;
+        z-index: 1;
+    }
+
+    &__image {
+        img {
+            display: block;
+            position: relative;
+            width: 100%;
+            z-index: 1;
+        }
+    }
+
+    &__text {
+        .button {
+            @media(max-width: $sm) {
+                max-width: 360px;
+                width: 100%;
             }
         }
     }
