--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,11 +16,14 @@
 @import "base/_slider-arrow.scss";
 @import "base/_slider-pagination.scss";
 @import "base/_tabs.scss";
-@import "base/_trans-table.scss";
+@import "base/_tables.scss";
 @import "base/_arrow-button.scss";
 @import "base/_content-block.scss";
 @import "base/_cut.scss";
 @import "base/_banners.scss";
+@import "base/_responsive-video.scss";
+@import "base/_rating.scss";
+@import "base/_rate.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -48,3 +51,5 @@
 @import "styles/_gallery-slider.scss";
 @import "styles/_case-banner.scss";
 @import "styles/_partners-slider.scss";
+@import "styles/_stats.scss";
+@import "styles/_num-cards.scss";
