--- a/src/css/styles/_case-banner.scss
+++ b/src/css/styles/_case-banner.scss
@@ -1,4 +1,5 @@
 .case-banner {
+    background: linear-gradient(180.85deg, #0045A2 0.72%, #2FA5E6 69.73%, #BCE2F9 84.52%, rgba(239, 248, 255, 0) 99.31%);
     color: #fff;
     display: flex;
     flex-direction: column;
