--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -343,55 +343,6 @@ ul {
     }
 }
 
-.responsive-table {
-    overflow-x: auto;
-}
-
-.table {
-    border-collapse: collapse;
-    border: none;
-    font-size: 16px;
-    width: 100%;
-
-    th {
-        background-color: #D9D9D9;
-        padding: 20px;
-    }
-
-    td,
-    th {
-        border: none;
-        font-weight: 300;
-        padding: 10px;
-        text-align: left;
-
-        &:first-child {
-            padding-left: 20px;
-        }
-
-        &:last-child {
-            padding-right: 20px;
-        }
-    }
-
-    th {
-        padding-top: 20px;
-        padding-bottom: 20px;
-    }
-
-    tbody {
-        tr:nth-child(1) {
-            td {
-                padding-top: 20px;
-            }
-        }
-    }
-
-    b {
-        font-weight: 700;
-    }
-}
-
 .text-center {
     text-align: center;
 }
@@ -452,4 +403,8 @@ blockquote {
     &:last-child {
         margin-bottom: 0;
     }
+}
+
+.color-grey-dark {
+    color: var(--grey_dark);
 }
