--- a/src/css/base/_fonts.scss
+++ b/src/css/base/_fonts.scss
@@ -47,3 +47,10 @@
     font-style: normal;
     font-display: swap;
 }
+@font-face {
+    font-family: 'Anjhay';
+    src: url("../fonts/subset-Anjhay.woff2") format('woff2'), url("../fonts/subset-Anjhay.woff") format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
