--- a/src/css/base/_tables.scss
+++ b/src/css/base/_tables.scss
@@ -1,4 +1,15 @@
+.responsive-table {
+    overflow-x: auto;
+}
+
+table {
+    border-collapse: collapse;
+    border: none;
+    width: 100%;
+}
+
 .trans-table {
+    font-family: var(--secondary_font);
     font-size: 14px;
     line-height: 1.28571;
     @media(min-width: $md) {
@@ -10,11 +21,6 @@
     @media(min-width: $fhd) {
         font-size: 16px;
         line-height: 1.5;
-    }
-
-    &__table {
-        border-collapse: collapse;
-        width: 100%;
     }
 
     &__header {
@@ -156,5 +162,126 @@
             height: 40px;
             width: 100%;
         }
+    }
+}
+
+.simple-table {
+    border-radius: 16px;
+    border: 1px solid rgba(128, 189, 232, 0.4);
+    background-color: rgba(218, 240, 255, 0.35);
+    font-family: var(--secondary_font);
+    font-size: 14px;
+    line-height: 1.28571;
+    padding: 16px;
+    @media(min-width: $md) {
+        padding: 8px 24px;
+    }
+    @media(min-width: $fhd) {
+        font-size: 16px;
+        line-height: 1.5;
+    }
+
+    colgroup {
+        @media(max-width: $md - 0.02px) {
+            display: none;
+        }
+    }
+
+    &__header {
+        @media(max-width: $md - 0.02px) {
+            display: none;
+        }
+
+        th {
+            border-bottom: 1px solid var(--blue_dark);
+            font-weight: 600;
+            text-align: left;
+            @media(min-width: $md) {
+                padding-top: 16px;
+                padding-bottom: 16px;
+            }
+
+            &:not(:last-child) {
+                @media(min-width: $md) {
+                    padding-right: 16px;
+                }
+            }
+        }
+    }
+
+    tbody {
+        tr {
+            &:not(:last-child) {
+                td {
+                    @media(min-width: $md) {
+                        border-bottom: 1px solid rgba(128, 189, 232, 0.4);
+                    }
+                }
+            }
+
+            &:not(:first-child) {
+                td {
+                    &:first-child {
+                        @media(max-width: $md - 0.02px) {
+                            padding-top: 16px;
+                        }
+                    }
+                }
+            }
+
+            &:not(:last-child) {
+                td {
+                    &:last-child {
+                        @media(max-width: $md - 0.02px) {
+                            border-bottom: 1px solid rgba(128, 189, 232, 0.4);
+                            padding-bottom: 16px;
+                        }
+                    }
+                }
+            }
+
+            &:last-child {
+                td {
+                    &:last-child {
+                        @media(max-width: $md - 0.02px) {
+                            padding-bottom: 0;
+                        }
+                    }
+                }
+            }
+        }
+
+        td {
+            @media(min-width: $md) {
+                padding-top: 16px;
+                padding-bottom: 16px;
+            }
+            @media(max-width: $md - 0.02px) {
+                align-items: center;
+                display: flex;
+                padding: 0 0 8px;
+            }
+
+            &::before {
+                @media(max-width: $md - 0.02px) {
+                    content: attr(data-title);
+                    font-weight: 600;
+                    min-width: 50%;
+                    padding-right: 8px;
+                    width: 50%;
+                }
+            }
+
+            &:not(:last-child) {
+                @media(min-width: $md) {
+                    padding-right: 16px;
+                }
+            }
+        }
+    }
+
+    a {
+        font-weight: 500;
+        text-decoration: none;
     }
 }
