--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -25,6 +25,7 @@ $fhd: 1900px;
     --container_padding: 16px;
     --primary_font: 'Raleway', Arial, sans-serif;
     --secondary_font: 'Montserrat', Arial, sans-serif;
+    --nums_font: 'Anjhay', Arial, sans-serif;
     --container_max_width: 1248px;
     --section_vertical_gap: 64px;
     @media(min-width: $md) {
