--- a/src/css/styles/_big-card.scss
+++ b/src/css/styles/_big-card.scss
@@ -15,6 +15,8 @@
     &--type_2 {
         @media(min-width: $md) {
             align-items: center;
+            box-shadow: 0 0 133px 28px rgba(106, 198, 255, 0.25);
+            border-radius: 24px;
             display: flex;
             gap: 24px;
         }
@@ -77,20 +79,20 @@
     }
 
     &__image-decor {
-        bottom: 16px;
-        left: 16px;
+        bottom: 0;
+        left: 0;
         object-fit: contain;
         object-position: center;
         position: absolute;
-        right: 16px;
-        top: 16px;
+        right: 0;
+        top: 0;
         z-index: 1;
-        @media(min-width: $md) {
+        /*@media(min-width: $md) {
             bottom: 8px;
             left: 8px;
             right: 8px;
             top: 8px;
-        }
+        }*/
     }
 
     &__text-block {
