--- a/src/css/styles/_features.scss
+++ b/src/css/styles/_features.scss
@@ -174,6 +174,9 @@ h2 + .features {
     &__image {
         margin-bottom: 12px;
         width: 48px;
+        @media(min-width: $hd) {
+            width: 60px;
+        }
         @media(min-width: $fhd) {
             margin-bottom: 24px;
             width: 80px;
@@ -227,6 +230,24 @@ h2 + .features {
     .slider-pagination {
         @media (min-width: $hd) and (max-width: 1319.98px) {
             display: flex;
+        }
+    }
+}
+
+.features-cards-layout {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+
+    .feature-card {
+        @media(max-width: 600px) {
+            width: 100%;
+        }
+        @media(min-width: 600px) {
+            width: calc(100% / 2 - 16px / 2);
+        }
+        @media(min-width: $md) {
+            width: calc(100% / 4 - 16px * 3 / 4);
         }
     }
 }
