--- a/src/css/styles/_reviews.scss
+++ b/src/css/styles/_reviews.scss
@@ -34,6 +34,17 @@
         padding: 16px;
     }
 
+    &--alone {
+        & > blockquote {
+            p {
+                display: -webkit-box;
+                -webkit-line-clamp: 5;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
+    }
+
     &__rating {
         display: flex;
         gap: 8px;
@@ -137,6 +148,10 @@
         border-radius: 0;
         border: none;
         padding: 0;
+
+        blockquote {
+            margin-left: 0;
+        }
     }
 
     .review__text {
