--- a/src/template/partners-slider.html
+++ b/src/template/partners-slider.html
@@ -1,9 +1,9 @@
-<div class="content-block content-block--type_1">
+<div class="partners-slider content-block content-block--type_1">
     <div class="content-block__text">
         <h2>Наши партнеры</h2>
         <p class="big-text" style="max-width: 470px">Мы выбираем инструменты, которые подходят под задачи каждого проекта</p>
 
-        <div class="partners-slider-buttons">
+        <div class="partners-slider__buttons">
             <button class="js-partners-slider-prev slider-arrow swiper-button-prev" type="button" title="Назад" data-slider="partners_slider">
                 <svg aria-hidden="true">
                     <use xlink:href="images/sprite.svg#chevron_left_24" />
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="partners-slider content-block__slider">
+    <div class="partners-slider__slider content-block__slider">
         <div class="js-partners-slider swiper" data-slider="partners_slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
