--- a/src/css/styles/_reviews.scss
+++ b/src/css/styles/_reviews.scss
@@ -35,6 +35,12 @@
     }
 
     &--alone {
+        @media(max-width: $md - 0.02px) {
+            border-radius: 0;
+            border: none;
+            padding: 0;
+        }
+
         & > blockquote {
             p {
                 display: -webkit-box;
@@ -163,21 +169,13 @@
 }
 
 .reviews-slider {
-    position: relative;
-    z-index: 1;
-    @media(max-width: $md - 0.02px) {
-        margin-left: calc(0.01px - var(--container_padding));
-        margin-right: calc(0.01px - var(--container_padding));
+    .slider-pagination {
+        @media (min-width: $hd) and (max-width: 1319.98px) {
+            display: flex;
+        }
     }
 
     .swiper-slide {
-        height: auto;
-        padding-top: 1px;
-        padding-bottom: 1px;
-        @media(max-width: $md - 0.02px) {
-            width: 328px;
-        }
-
         .review {
             height: 100%;
         }
