--- a/src/template/articles-slider-2.html
+++ b/src/template/articles-slider-2.html
@@ -1,4 +1,4 @@
-<div class="articles-slider">
+<div class="articles-slider slider slider--type_1">
     <div class="js-articles-slider swiper" data-slider="articles_slider_2">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
