--- a/src/template/big-features.html
+++ b/src/template/big-features.html
@@ -1,4 +1,4 @@
-<div class="big-features-slider">
+<div class="big-features-slider slider slider--type_1">
     <div class="js-big-features-slider swiper" data-slider="big_features_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
