--- a/src/template/docs-slider.html
+++ b/src/template/docs-slider.html
@@ -1,4 +1,4 @@
-<div class="docs-slider">
+<div class="docs-slider slider slider--type_2">
     <div class="js-docs-slider swiper" data-slider="docs_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
