--- a/src/template/features-cards-slider.html
+++ b/src/template/features-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="features-cards-slider">
+<div class="features-cards-slider slider slider--type_2">
     <div class="js-features-cards-slider swiper" data-slider="features_cards_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
