--- a/src/template/gallery-slider.html
+++ b/src/template/gallery-slider.html
@@ -1,4 +1,4 @@
-<div class="gallery-slider">
+<div class="gallery-slider slider slider--type_1">
     <div class="js-gallery-slider swiper" data-slider="gallery_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
