--- a/src/template/links-cards-slider.html
+++ b/src/template/links-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="links-cards-slider">
+<div class="links-cards-slider slider slider--type_2">
     <div class="js-links-cards-slider swiper" data-slider="links_cards_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
