--- a/src/template/num-cards-slider.html
+++ b/src/template/num-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="num-cards-slider">
+<div class="num-cards-slider slider slider--type_2">
     <div class="js-num-cards-slider swiper" data-slider="num_cards_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
