--- a/src/template/persons-slider-big.html
+++ b/src/template/persons-slider-big.html
@@ -1,4 +1,4 @@
-<div class="persons-slider persons-slider--big">
+<div class="persons-slider persons-slider--big slider slider--type_2">
     <div class="js-persons-slider-2 swiper" data-slider="persons_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
