--- a/src/template/persons-slider-small.html
+++ b/src/template/persons-slider-small.html
@@ -1,4 +1,4 @@
-<div class="persons-slider persons-slider--small">
+<div class="persons-slider persons-slider--small slider slider--type_1">
     <div class="js-persons-slider swiper" data-slider="persons_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
