--- a/src/template/portfolio-cards-slider.html
+++ b/src/template/portfolio-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="portfolio-slider">
+<div class="portfolio-slider slider slider--type_2">
     <div class="js-portfolio-slider swiper" data-slider="portfolio_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
