--- a/src/template/projects-slider.html
+++ b/src/template/projects-slider.html
@@ -1,4 +1,4 @@
-<div class="big-cards-slider">
+<div class="big-cards-slider slider slider--type_1">
     <div class="js-big-cards-slider swiper" data-slider="big_cards_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
