--- a/src/template/reviews-slider.html
+++ b/src/template/reviews-slider.html
@@ -1,4 +1,4 @@
-<div class="reviews-slider">
+<div class="reviews-slider slider slider--type_1">
     <div class="js-reviews-slider swiper" data-slider="reviews_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
