--- a/src/template/services-cards-slider.html
+++ b/src/template/services-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="services-cards-slider">
+<div class="services-cards-slider slider slider--type_2">
     <div class="js-services-cards-slider swiper" data-slider="services_cards_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
