--- a/src/template/single-slider-2.html
+++ b/src/template/single-slider-2.html
@@ -1,4 +1,4 @@
-<div class="single-slider">
+<div class="single-slider slider slider--type_1">
     <div class="js-single-slider swiper" data-slider="single_slider_2">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
