--- a/src/template/speech-cards-slider.html
+++ b/src/template/speech-cards-slider.html
@@ -1,4 +1,4 @@
-<div class="speech-slider">
+<div class="speech-slider slider slider--type_1">
     <div class="js-speech-slider swiper" data-slider="speech_slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
