--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -101,15 +101,17 @@ html {
             }
         }
 
-        &--decor_1 {
+        &--section_decor_1 {
             @media(min-width: $md) {
                 position: relative;
                 z-index: 0;
             }
 
             & > * {
-                position: relative;
-                z-index: 1;
+                &:not(.cloud) {
+                    position: relative;
+                    z-index: 1;
+                }
             }
 
             &::before {
@@ -118,20 +120,190 @@ html {
                     background-color: #6AC6FF;
                     content: '';
                     filter: blur(175px);
-                    height: 100%;
                     left: 0;
-                    max-width: 600px;
+                    max-width: 660px;
                     opacity: 0.9;
                     pointer-events: none;
                     position: absolute;
                     top: 50%;
                     touch-action: none;
-                    transform: translate(0, -50%) rotate(131deg);
+                    transform: translate(-50%, -50%);
                     width: 100%;
                     z-index: 0;
                 }
             }
         }
+
+        &--section_decor_2 {
+            @media(min-width: $md) {
+                position: relative;
+                z-index: 0;
+            }
+
+            & + .page__section {
+                position: relative;
+                z-index: 1;
+            }
+
+            & > * {
+                &:not(.cloud) {
+                    position: relative;
+                    z-index: 1;
+                }
+            }
+
+            &::before {
+                @media(min-width: $md) {
+                    background-color: #6AC6FF;
+                    content: '';
+                    filter: blur(175px);
+                    left: 0;
+                    height: 1270px;
+                    width: 615px;
+                    opacity: 0.9;
+                    pointer-events: none;
+                    position: absolute;
+                    top: 0;
+                    touch-action: none;
+                    transform: translate(-50%, -10%) rotate(-120deg);
+                    z-index: 0;
+                }
+            }
+        }
+
+        &--section_decor_3 {
+            @media(min-width: $md) {
+                position: relative;
+                z-index: 0;
+            }
+
+            & + .page__section {
+                position: relative;
+                z-index: 1;
+            }
+
+            & > * {
+                &:not(.cloud) {
+                    position: relative;
+                    z-index: 1;
+                }
+            }
+
+            &::before {
+                @media(min-width: $md) {
+                    background-color: #6AC6FF;
+                    content: '';
+                    filter: blur(175px);
+                    left: auto;
+                    right: 0;
+                    height: 1270px;
+                    width: 615px;
+                    opacity: 0.9;
+                    pointer-events: none;
+                    position: absolute;
+                    top: 0;
+                    touch-action: none;
+                    transform: translate(50%, -10%) rotate(120deg);
+                    z-index: 0;
+                }
+            }
+        }
+
+        &--clouds {
+            @media(min-width: $md) {
+                position: relative;
+                z-index: 0;
+            }
+
+            & > * {
+                &:not(.cloud) {
+                    position: relative;
+                    z-index: 1;
+                }
+            }
+        }
+
+        .cloud {
+            background-position: 0 0;
+            background-repeat: no-repeat;
+            left: 0;
+            position: absolute;
+            top: -50px;
+            z-index: 0;
+            @media(max-width: $md - 0.02px) {
+                display: none;
+            }
+
+            &--bottom {
+                bottom: -50px;
+                top: auto;
+            }
+
+            &--move {
+                animation-iteration-count: infinite;
+                animation-direction: alternate;
+            }
+
+            &--ltr {
+                animation-duration: 100s;
+                animation-name: moveLeftToRight;
+                animation-timing-function: linear;
+            }
+
+            &--rtl {
+                animation-duration: 100s;
+                animation-name: moveRightToLeft;
+                animation-timing-function: linear;
+            }
+
+            &--type_1 {
+                background-image: url("../images/backgrounds/sections_decor/cloud_1.svg");
+                height: 48px;
+                width: 291px;
+            }
+
+            &--type_2 {
+                background-image: url("../images/backgrounds/sections_decor/cloud_2.svg");
+                height: 76px;
+                width: 328px;
+            }
+
+            &--type_3 {
+                background-image: url("../images/backgrounds/sections_decor/cloud_3.svg");
+                height: 92px;
+                width: 484px;
+            }
+
+            &--type_4 {
+                background-image: url("../images/backgrounds/sections_decor/cloud_4.svg");
+                height: 75px;
+                width: 460px;
+            }
+
+            &--type_5 {
+                background-image: url("../images/backgrounds/sections_decor/cloud_5.svg");
+                height: 92px;
+                width: 484px;
+            }
+        }
+    }
+}
+@keyframes moveLeftToRight {
+    from {
+        transform: translateX(-200%);
+    }
+
+    to {
+        transform: translateX(600%);
+    }
+}
+@keyframes moveRightToLeft {
+    from {
+        transform: translateX(200%);
+    }
+
+    to {
+        transform: translateX(-600%);
     }
 }
 
