--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -445,6 +445,12 @@ ul {
 
 ol {
     list-style-position: inside;
+
+    li {
+        &::marker {
+            font-family: var(--secondary_font);
+        }
+    }
 }
 
 ul {
