--- a/src/css/styles/_header.scss
+++ b/src/css/styles/_header.scss
@@ -94,7 +94,9 @@
     top: 0;
     transition: background-color 0.3s;
     z-index: 10;
-
+    /*@media(max-width: $md - 0.02px) {
+        position: fixed;
+    }*/
     &.is-scrolled,
     &.menu-is-open {
         background-color: #fff;
@@ -106,7 +108,10 @@
 
         .header__bottom,
         .header__top {
-            background-color: #fff;
+            background-color: var(--blue_light);
+            @media(min-width: $md) {
+                background-color: #fff;
+            }
         }
 
         .header__logo {
@@ -183,7 +188,9 @@
     }
 
     &.is-out {
-        transform: translateY(-100%);
+        @media(min-width: $md) {
+            transform: translateY(-100%);
+        }
     }
 
     &__container {
