--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -24,6 +24,8 @@
 @import "base/_responsive-video.scss";
 @import "base/_rating.scss";
 @import "base/_rate.scss";
+@import "base/_audio.scss";
+@import "base/_share.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -56,3 +58,4 @@
 @import "styles/_why.scss";
 @import "styles/_results.scss";
 @import "styles/_article.scss";
+@import "styles/_comments.scss";
