--- a/src/css/base/_banners.scss
+++ b/src/css/base/_banners.scss
@@ -3,10 +3,18 @@
     border-radius: 24px;
     color: #fff;
     font-family: var(--secondary_font);
+    margin-bottom: 40px;
     position: relative;
     z-index: 0;
     @media(min-width: $hd) {
         border-radius: 32px;
+    }
+    @media(min-width: $fhd) {
+        margin-bottom: 48px;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
     }
 
     &--bg_1 {
