--- a/src/css/base/_slider.scss
+++ b/src/css/base/_slider.scss
@@ -137,4 +137,34 @@
             }
         }
     }
+
+    &--type_3 {
+        margin-bottom: 40px;
+        @media(min-width: $fhd) {
+            margin-bottom: 48px;
+        }
+
+        .slider-arrow {
+            border-radius: 12px;
+            background-color: rgba(#1E76E2, 0.5);
+            border: none;
+            @media(min-width: $fhd) {
+                height: 40px;
+                width: 40px;
+            }
+
+            &.swiper-button-prev {
+                left: 8px;
+            }
+
+            &.swiper-button-next {
+                left: auto;
+                right: 8px;
+            }
+
+            svg {
+                fill: #fff;
+            }
+        }
+    }
 }
