--- a/src/css/base/_tables.scss
+++ b/src/css/base/_tables.scss
@@ -12,6 +12,7 @@ table {
     font-family: var(--secondary_font);
     font-size: 14px;
     line-height: 1.28571;
+    margin-bottom: 48px;
     @media(min-width: $md) {
         border-radius: 16px;
         border: 1px solid rgba(128, 189, 232, 0.4);
@@ -21,6 +22,11 @@ table {
     @media(min-width: $fhd) {
         font-size: 16px;
         line-height: 1.5;
+        margin-bottom: 64px;
+    }
+
+    &:last-child {
+        margin-bottom: 0;
     }
 
     &__header {
