--- a/src/css/styles/_person-detail.scss
+++ b/src/css/styles/_person-detail.scss
@@ -8,8 +8,7 @@
         flex-direction: row-reverse;
         gap: 48px;
         justify-content: space-between;
-        padding-top: 48px;
-        padding-bottom: 48px;
+        padding: 48px;
     }
     @media(min-width: $lg) {
         margin-left: -80px;
