--- a/src/css/styles/_reviews.scss
+++ b/src/css/styles/_reviews.scss
@@ -65,8 +65,11 @@
     }
 
     &__about {
-        font-weight: 600;
-        margin-bottom: 16px;
+        margin-bottom: 8px;
+        @media(min-width: $fhd) {
+            font-size: 20px;
+            margin-bottom: 16px;
+        }
     }
 
     &__text {
