--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -26,9 +26,9 @@
 @import "base/_rate.scss";
 @import "base/_audio.scss";
 @import "base/_share.scss";
+@import "base/_float-block.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
-@import "styles/_to-top.scss";
 @import "styles/_footer.scss";
 @import "styles/_main-banner.scss";
 @import "styles/_request-form.scss";
@@ -59,3 +59,4 @@
 @import "styles/_results.scss";
 @import "styles/_article.scss";
 @import "styles/_comments.scss";
+@import "styles/_site-map.scss";
