--- a/src/template/big-features.html
+++ b/src/template/big-features.html
@@ -1,7 +1,7 @@
 <div class="big-features-slider slider slider--type_1">
     <div class="js-big-features-slider swiper" data-slider="big_features_slider">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up">
                 <div class="big-feature">
                     <div class="big-feature__image">
                         <img src="images/content/features/big_feature.jpg" srcset="images/content/features/big_feature@2x.jpg 2x" alt="">
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up">
                 <div class="big-feature">
                     <div class="big-feature__image">
                         <img src="images/content/features/big_feature.jpg" srcset="images/content/features/big_feature@2x.jpg 2x" alt="">
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up">
                 <div class="big-feature">
                     <div class="big-feature__image">
                         <img src="images/content/features/big_feature.jpg" srcset="images/content/features/big_feature@2x.jpg 2x" alt="">
