--- a/src/template/faq.html
+++ b/src/template/faq.html
@@ -1,7 +1,7 @@
 <div class="content-block content-block--type_2">
     <h2>Частые вопросы</h2>
 
-    <div class="content-block__image">
+    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
         <img src="images/content/content_blocks/img_9.png" srcset="images/content/content_blocks/img_9@2x.png 2x" alt="">
     </div>
 
