--- a/src/template/tarifs-slider.html
+++ b/src/template/tarifs-slider.html
@@ -1,7 +1,7 @@
 <div class="tarifs-slider">
     <div class="js-tarifs-slider swiper" data-slider="tarifs_slider">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up" data-aos-delay="200">
                 <div class="tarif tarif--light">
                     <div class="tarif__inner">
                         <h3 class="tarif__title">Minimum</h3>
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up" data-aos-delay="400">
                 <div class="tarif tarif--light">
                     <div class="tarif__inner">
                         <h3 class="tarif__title">Standart</h3>
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up" data-aos-delay="600">
                 <div class="tarif tarif--dark">
                     <div class="tarif__badge">Оптимальный</div>
 
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" data-aos="fade-up" data-aos-delay="800">
                 <div class="tarif tarif--light">
                     <div class="tarif__inner">
                         <h3 class="tarif__title">Ultimate</h3>
