--- a/src/template/why-we.html
+++ b/src/template/why-we.html
@@ -103,7 +103,7 @@
 </div>
 
 <div class="why-we mobile-hidden content-block content-block--type_1">
-    <div class="content-block__image">
+    <div class="content-block__image" data-aos-delay="600" data-aos="zoom-in">
         <img class="js-why-image why-image" src="images/content/content_blocks/img.png" srcset="images/content/content_blocks/img@2x.png 2x" alt="">
     </div>
 
