--- a/src/css/styles/_catalog.scss
+++ b/src/css/styles/_catalog.scss
@@ -690,6 +690,7 @@
             overflow-x: auto;
             padding-left: var(--container_padding);
             padding-right: var(--container_padding);
+            scrollbar-width: none;
         }
         @media(min-width: $md) {
             flex-wrap: wrap;
