--- a/src/template/common/styles.html
+++ b/src/template/common/styles.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="plugins_css/jquery.fancybox.css" />
 <link rel="stylesheet" href="plugins_css/swiper-bundle.min.css" />
+<link rel="stylesheet" href="plugins_css/aos.css" />
 <link rel="stylesheet" href="css/style.css" />
