--- a/src/css/styles/_big-card.scss
+++ b/src/css/styles/_big-card.scss
@@ -2,6 +2,7 @@
     background-color: var(--blue_light);
     @media(min-width: $md) {
         display: flex;
+        gap: 32px;
     }
 
     &--type_1 {
