--- a/src/css/styles/_header.scss
+++ b/src/css/styles/_header.scss
@@ -123,7 +123,7 @@
         .header__callback {
             background-color: var(--primary);
             color: #fff;
-            outline: 5px solid rgba(30, 118, 226, 0.18);
+            outline: none;
             @include hover {
                 background-image: none;
                 background-color: var(--primary_hover);
@@ -141,7 +141,11 @@
                 background-color: var(--primary_pressed);
             }
 
+            &::after,
             &::before {
+                display: none;
+            }
+            /*&::before {
                 background: radial-gradient(100% 100% at 50% 0%, #1066D0 0%, #5BA5FF 100%);
                 bottom: 0;
                 content: '';
@@ -166,7 +170,7 @@
                 transition: background-color 0.3s;
                 transform: translateY(-50%);
                 z-index: 0;
-            }
+            }*/
         }
 
         .header__bottom-menu-item {
