--- a/src/css/base/_tabs.scss
+++ b/src/css/base/_tabs.scss
@@ -19,8 +19,17 @@
         line-height: 1.5;
         padding: 0 12px;
         transition: color 0.3s;
+        white-space: nowrap;
+        width: 50%;
+        @media(min-width: $sm) {
+            min-width: 180px;
+        }
+        @media(min-width: $md) {
+            min-width: 220px;
+        }
         @media(min-width: $fhd) {
             font-size: 20px;
+            min-width: 220px;
             padding-left: 24px;
             padding-right: 24px;
         }
