--- a/src/css/styles/_features.scss
+++ b/src/css/styles/_features.scss
@@ -26,7 +26,7 @@ h2 + .features {
     }
 
     &__item {
-        align-items: flex-start;
+        align-items: center;
         display: flex;
         gap: 8px;
         @media(max-width: $md - 0.02px) {
