--- a/src/template/why-we.html
+++ b/src/template/why-we.html
@@ -111,7 +111,7 @@
         <h2>Почему выбирают нас</h2>
 
         <div class="why-block">
-            <div class="why is-active" data-src="images/content/content_blocks/img.png" data-srcset="images/content/content_blocks/img@2x.png 2x">
+            <div class="why" data-src="images/content/content_blocks/img.png" data-srcset="images/content/content_blocks/img@2x.png 2x">
                 <button class="js-why-toggler why__toggler" type="button">
                     <svg aria-hidden="true">
                         <use xlink:href="images/sprite.svg#code_icon" />
@@ -119,8 +119,14 @@
                     <span>Полный цикл разработки</span>
                 </button>
 
-                <div class="why__body" style="display: block">
-                    <p>Obcaecati eaque nobis sapiente quam quasi eligendi culpa iusto, aliquid explicabo natus aut repellat accusamus? Et accusantium non, perspiciatis, ipsam consequuntur suscipit.</p>
+                <div class="why__body">
+                    <div>
+                        <p>Obcaecati eaque nobis sapiente quam quasi eligendi culpa iusto, aliquid explicabo natus aut repellat accusamus? Et accusantium non, perspiciatis, ipsam consequuntur suscipit.</p>
+                    </div>
+
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
 
@@ -133,7 +139,13 @@
                 </button>
 
                 <div class="why__body">
-                    <p>Enim officia eaque, repellendus, sequi explicabo est odit ab voluptate, vel quae minima quas minus fugit hic molestiae debitis doloremque omnis consectetur.</p>
+                    <div>
+                        <p>Enim officia eaque, repellendus, sequi explicabo est odit ab voluptate, vel quae minima quas minus fugit hic molestiae debitis doloremque omnis consectetur.</p>
+                    </div>
+
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
 
@@ -146,11 +158,17 @@
                 </button>
 
                 <div class="why__body">
-                    <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
+                    <div>
+                        <p>Мы предлагаем гибкие условия оплаты разработки игры, чтобы сделать инвестиции комфортными для вашего бизнеса.</p>
+                    </div>
+
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
 
-            <div class="why" data-src="images/content/content_blocks/img_8.png" data-srcset="images/content/content_blocks/img_8@2x.png 2x">
+            <div class="why" data-src="images/content/content_blocks/img.png" data-srcset="images/content/content_blocks/img@2x.png 2x">
                 <button class="js-why-toggler why__toggler" type="button">
                     <svg aria-hidden="true">
                         <use xlink:href="images/sprite.svg#gamepad_icon" />
@@ -159,7 +177,13 @@
                 </button>
 
                 <div class="why__body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+                    </div>
+
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
 
@@ -172,11 +196,17 @@
                 </button>
 
                 <div class="why__body">
-                    <p>Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+                    <div>
+                        <p>Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero. Magni exercitationem minima soluta consequatur molestias.</p>
+                    </div>
+
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
 
-            <div class="why" data-src="images/content/content_blocks/img.png" data-srcset="images/content/content_blocks/img@2x.png 2x">
+            <div class="why" data-src="images/content/content_blocks/img_8.png" data-srcset="images/content/content_blocks/img_8@2x.png 2x">
                 <button class="js-why-toggler why__toggler" type="button">
                     <svg aria-hidden="true">
                         <use xlink:href="images/sprite.svg#coop_icon" />
@@ -185,7 +215,12 @@
                 </button>
 
                 <div class="why__body">
-                    <p>Magni exercitationem minima soluta consequatur molestias. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero.</p>
+                    <div>
+                        <p>Magni exercitationem minima soluta consequatur molestias. Quidem tenetur a harum sequi nobis fugit molestias, quae non, labore dicta quis commodi quos vero.</p>
+                    </div>
+                    <div class="why__progress-bar">
+                        <div class="why__progress"></div>
+                    </div>
                 </div>
             </div>
         </div>
